[package]
name = "ctvtcntr"
description = "A simple yet powerful hyprland activity logger"
version = "0.1.0"
repository = "https://github.com/zedddie16/ctvtcntr"
edition = "2021"
authors = ["zedddie16 <zedddiezxc@gmail.com>"]


[dependencies]
thiserror = "2.0.9"
ctrlc = "3.4.6"
hyprland = "0.4.0-beta.2"
serde = {version = "1.0.217", features  = ["derive"]}
csv = "1.3.1"
chrono = "0.4.39"
tracing = "0.1.41"
regex = "0.2.11"
tracing-subscriber = "0.3.19"
