[package]
name = "ctvtcntr"
description = "A simple yet powerful hyprland activity logger"
version = "0.1.1"
repository = "https://github.com/zedddie16/ctvtcntr"
edition = "2021"
authors = ["zedddie16 <zedddiezxc@gmail.com>"]
license = "GPL-3.0-or-later"

[dependencies]
thiserror = "2.0.12"
ctrlc = "3.4.7"
hyprland = "0.4.0-beta.2"
serde = {version = "1.0.219", features  = ["derive"]}
csv = "1.3.1"
chrono = "0.4.41"
tracing = "0.1.41"
regex = "1.11.1"
tracing-subscriber = "0.3.19"
duckdb = { version = "1.2.2", features = ["chrono"] }
